# coregate

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md
.github/workflows/: pages.yml
bzl/: BUILD.bazel  providers.bzl  vm_host.bzl  vm_kernel.bzl  vm_test.bzl
crates/bpf-loader/: Cargo.toml  build.rs
crates/bpf-loader/src/: main.rs
crates/bpf-loader/src/bpf/: minimal_bpf.h  stacktrace.bpf.c
crates/bpf-stack/: BUILD.bazel  Cargo.toml
crates/bpf-stack/src/: lib.rs
crates/cli/: BUILD.bazel  Cargo.toml  build.rs
crates/cli/proto/: config.proto
crates/cli/src/: config.rs  main.rs
crates/corefile/: BUILD.bazel  Cargo.toml
crates/corefile/src/: lib.rs
crates/coregate/: BUILD.bazel  Cargo.toml
crates/coregate-cli/: BUILD.bazel  Cargo.toml
crates/coregate-cli/src/: lib.rs
crates/coregate/proto/: config.proto
crates/coregate/src/: bpf.rs  config.rs  corefile.rs  defaults.rs  dump.rs  ingress.rs  lib.rs  meta.rs  modules.rs  runtime.rs  setup.rs  store.rs  telemetry.rs
crates/kernel/: BUILD.bazel  Cargo.toml
crates/kernel/src/: lib.rs
crates/limit/: BUILD.bazel  Cargo.toml
crates/limit/src/: lib.rs
crates/meta/: BUILD.bazel  Cargo.toml
crates/meta/src/: lib.rs
crates/store/: BUILD.bazel  Cargo.toml
crates/store/src/: lib.rs
crates/symbolizer-proto/: BUILD.bazel  Cargo.toml  build.rs
crates/symbolizer-proto/proto/: symbolizer.proto
crates/symbolizer-proto/src/: lib.rs
crates/telemetry/: BUILD.bazel  Cargo.toml
crates/victim-crash/: BUILD.bazel  Cargo.toml
crates/victim-crash/src/: main.rs
crates/vmtest/: BUILD.bazel  Cargo.toml
crates/vmtest-agent/: BUILD.bazel  Cargo.toml
crates/vmtest-agent/src/: main.rs
crates/vmtest-protocol/: BUILD.bazel  Cargo.toml
crates/vmtest-protocol/src/: lib.rs
crates/vmtest-scenarios/: BUILD.bazel  Cargo.toml
crates/vmtest-scenarios/src/: lib.rs
crates/vmtest-scenarios/tests/scenarios/: core_pattern_segv.rs  deleted_exe.rs  dumpable_off.rs  server_legacy_segv.rs  server_segv.rs  storage_refused.rs  thread_crash.rs
crates/vmtest/src/: control.rs  lib.rs  main.rs  protocol.rs
crates/vmtest/tests/: scenarios_main.rs
crates/vmtest/tests/scenarios/: core_pattern_segv.rs  deleted_exe.rs  dumpable_off.rs  mod.rs  server_legacy_segv.rs  server_segv.rs  storage_refused.rs  thread_crash.rs
crates/xtask/: BUILD.bazel  Cargo.toml
crates/xtask/src/: main.rs
docs/: MODULE_SYSTEM.md  PLAN.md  STATE.md  USAGE.md  config.example.json
site/: hugo.toml
site/assets/css/: main.css
site/content/: _index.md
site/content/docs/: _index.md  bazel.md  bpf-stack.md  configuration.md  kernel-modes.md  quickstart.md  testing.md  vm-tests.md
site/layouts/: index.html
site/layouts/_default/: baseof.html  list.html  single.html
site/layouts/partials/: footer.html  header.html
tests/vm/: BUILD.bazel  coregate-config-storage-refused.json  coregate-config.json  coregate_assertions.py  defs.bzl  smoke_test.sh  test_core_pattern_segv.py  test_deleted_exe.py  test_dumpable_off.py  test_server_legacy_segv.py  test_server_segv.py  test_storage_refused.py  test_thread_crash.py
