exports_files([
    "Cargo.toml",
    "Cargo.lock",
])

constraint_setting(
    name = "libc",
    visibility = ["//visibility:public"],
)

constraint_value(
    name = "musl",
    constraint_setting = ":libc",
    visibility = ["//visibility:public"],
)

platform(
    name = "linux_x86_64_musl",
    constraint_values = [
        ":musl",
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)
