load("@rules_rust//rust:defs.bzl", "rust_binary")

exports_files([
    "Cargo.toml",
    "Cargo.lock",
])

rust_binary(
    name = "coregate",
    srcs = ["bin/coregate.rs"],
    deps = [
        "//crates/coregate:coregate_lib",
        "//crates/coregate-cli:coregate_cli_lib",
        "@crates//:anyhow",
    ],
    visibility = ["//visibility:public"],
)

rust_binary(
    name = "coregate_guest",
    srcs = ["bin/coregate.rs"],
    deps = [
        "//crates/coregate:coregate_lib_guest",
        "//crates/coregate-cli:coregate_cli_lib_guest",
        "@crates//:anyhow",
    ],
    visibility = ["//visibility:public"],
)

constraint_setting(
    name = "libc",
    visibility = ["//visibility:public"],
)

constraint_value(
    name = "musl",
    constraint_setting = ":libc",
    visibility = ["//visibility:public"],
)

platform(
    name = "linux_x86_64_musl",
    constraint_values = [
        ":musl",
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)
