[package]
name = "coregate-bin"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "coregate"
path = "bin/coregate.rs"

[workspace]
members = [
  "crates/bpf-stack",
  "crates/bpf-loader",
  "crates/coregate-cli",
  "crates/coregate",
  "crates/symbolizer-proto",
  "crates/vmtest",
  "crates/vmtest-scenarios",
  "crates/xtask",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
blazesym = "0.2.3"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
chrono = { version = "0.4", features = ["serde", "clock"] }
object = { version = "0.37", features = ["read_core", "elf"] }
zstd = "0.13"
xz2 = "0.1"
libc = "0.2"
prost = "0.13"
prost-build = "0.13"
libbpf-rs = { version = "0.26.1", features = ["vendored"] }
libbpf-cargo = "0.26.1"
tokio = { version = "1.51.1", features = ["fs", "io-std", "io-util", "net", "rt-multi-thread", "time"] }

[dependencies]
anyhow.workspace = true
coregate = { path = "crates/coregate" }
coregate-cli = { path = "crates/coregate-cli" }
