module(
    name = "coregate",
    version = "0.1.0",
)

bazel_dep(name = "rules_rust", version = "0.69.0")
bazel_dep(name = "rules_shell", version = "0.4.1")
bazel_dep(name = "rules_python", version = "1.4.1")
bazel_dep(name = "platforms", version = "1.0.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.repository_set(
    name = "rust_linux_x86_64",
    edition = "2024",
    exec_triple = "x86_64-unknown-linux-gnu",
    target_triple = "x86_64-unknown-linux-musl",
    target_compatible_with = [
        "//:musl",
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    versions = ["1.94.0"],
)
rust.toolchain(
    edition = "2024",
    versions = ["1.94.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
    ],
)
use_repo(crate, "crates")

# VM test images.
# To update: change the URL and sha256, then `bazel fetch @debian12_vm_image//...`
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "debian12_vm_image",
    urls = ["https://cloud.debian.org/images/cloud/bookworm/latest/debian-12-generic-amd64.qcow2"],
    sha256 = "30016ae76fc2ab4d2acdfa0c112a8336a1436d30e3ecb9d998c0c5e6059c0cfc",
    downloaded_file_path = "debian-12-generic-amd64.qcow2",
)
