load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "coregate-bpf-stack",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "coregate_bpf_stack",
    aliases = aliases(),
    deps = all_crate_deps(normal = True) + [
        "//crates/symbolizer-proto:coregate-symbolizer-proto",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True),
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
