[package]
name = "coregate-bpf-stack"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blazesym.workspace = true
coregate-symbolizer-proto = { path = "../symbolizer-proto" }
debuginfod = { version = "0.3.0", default-features = false, features = ["fs-cache", "reqwest"] }
libbpf-rs.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
