load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary")

cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    build_script_env = {},
    data = ["proto/config.proto"],
    deps = all_crate_deps(build = True),
)

rust_binary(
    name = "coregate",
    srcs = glob(["src/**/*.rs"]),
    crate_features = ["sqlite"],
    aliases = aliases(),
    deps = all_crate_deps(normal = True) + [
        ":build_script",
        "//crates/corefile:collector-core",
        "//crates/kernel:collector-kernel",
        "//crates/limit:collector-limit",
        "//crates/meta:collector-meta",
        "//crates/store:collector-store",
        "//crates/telemetry:collector-telemetry",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
)
