[package]
name = "coregate"
version = "0.1.0"
edition.workspace = true
license.workspace = true
build = "build.rs"

[features]
default = ["sqlite"]
sqlite = ["collector-store/sqlite"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
collector-core = { path = "../corefile" }
coregate-bpf-stack = { path = "../bpf-stack" }
coregate-symbolizer-proto = { path = "../symbolizer-proto" }
collector-kernel = { path = "../kernel" }
collector-limit = { path = "../limit" }
collector-meta = { path = "../meta" }
collector-store = { path = "../store", default-features = false }
collector-telemetry = { path = "../telemetry" }
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
libc.workspace = true
reqwest.workspace = true

[build-dependencies]
prost-build.workspace = true
