load("@crates//:defs.bzl", "aliases", "all_crate_deps", "crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "coregate_cli_lib",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "coregate_cli",
    aliases = aliases(),
    deps = all_crate_deps(normal = True) + [
        "//crates/coregate:coregate_lib",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
)

rust_library(
    name = "coregate_cli_lib_guest",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "coregate_cli",
    aliases = aliases(),
    deps = crate_deps([
        "anyhow",
        "clap",
        "tokio",
    ]) + [
        "//crates/coregate:coregate_lib_guest",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
)
