[package]
name = "coregate"
version = "0.1.0"
edition.workspace = true
license.workspace = true
build = "build.rs"

[features]
default = ["default-impls", "sqlite"]
default-impls = []
bpf = ["dep:coregate-bpf-stack", "dep:reqwest"]
sqlite = ["dep:rusqlite"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
coregate-bpf-stack = { path = "../bpf-stack", optional = true }
fs2 = "0.4"
libc.workspace = true
object.workspace = true
prost.workspace = true
reqwest = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
xz2.workspace = true
zstd.workspace = true

[build-dependencies]
prost-build.workspace = true
