load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "collector-store",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "collector_store",
    crate_features = ["sqlite"],
    aliases = aliases(),
    deps = all_crate_deps(normal = True) + [
        "//crates/corefile:collector-core",
        "//crates/limit:collector-limit",
        "//crates/meta:collector-meta",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
)
