[package]
name = "collector-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]

[dependencies]
anyhow.workspace = true
collector-core = { path = "../corefile" }
collector-limit = { path = "../limit" }
collector-meta = { path = "../meta" }
fs2 = "0.4"
rusqlite = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
