load("//bzl:vm_host.bzl", "vm_host")
load("//bzl:vm_kernel.bzl", "vm_kernel_from_guest_packages", "vm_kernel_from_image")
load("//bzl:vm_test.bzl", "vm_python_test", "vm_sh_test")
load(":defs.bzl", "HANDLE_DATA", "VM_TAGS", "handle_guest_setup", "server_guest_setup")

# ---------------------------------------------------------------------------
# VM host targets
# ---------------------------------------------------------------------------

genrule(
    name = "coregate_guest",
    srcs = ["//:coregate_guest"],
    outs = ["coregate"],
    cmd = "cp $< $@",
)

# Extract kernel + initrd from the Debian cloud image.
# Requires libguestfs-tools: sudo apt-get install libguestfs-tools
vm_kernel_from_image(
    name = "debian12_kernel",
    image = "@debian12_vm_image//file",
    tags = ["manual"],
)

# Boot from disk (GRUB inside the qcow2).
vm_host(
    name = "debian12",
    image = "@debian12_vm_image//file",
    memory_mib = 2048,
    cpus = 2,
    visibility = ["//visibility:public"],
)

# Direct kernel boot (faster, skips GRUB/BIOS).
vm_host(
    name = "debian12_direct",
    image = "@debian12_vm_image//file",
    vm_kernel = ":debian12_kernel",
    memory_mib = 2048,
    cpus = 2,
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

vm_kernel_from_guest_packages(
    name = "linux_6_19_kernel",
    image = "@debian12_vm_image//file",
    mainline_tag = "v6.19",
    kernel_release = "6.19.0-061900-generic",
    package_version = "6.19.0-061900.202602082231",
    tags = ["manual"],
)

# Direct boot with Linux 6.19 kernel+initrd produced by Bazel from the
# Debian rootfs plus Ubuntu mainline kernel packages.
vm_host(
    name = "debian12_linux_6_19",
    image = "@debian12_vm_image//file",
    vm_kernel = ":linux_6_19_kernel",
    memory_mib = 2048,
    cpus = 2,
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

# ---------------------------------------------------------------------------
# Scenarios — handle mode (work with any kernel)
# ---------------------------------------------------------------------------

# 1. core_pattern_segv: basic SIGSEGV collection
vm_python_test(
    name = "core_pattern_segv",
    srcs = ["test_core_pattern_segv.py"],
    vm_host = ":debian12",
    data = HANDLE_DATA,
    guest_setup = handle_guest_setup("/usr/local/bin/victim-crash segv || true"),
    timeout_secs = 300,
    tags = VM_TAGS,
)

# 2. dumpable_off: PR_SET_DUMPABLE=0, coregate should refuse
vm_python_test(
    name = "dumpable_off",
    srcs = ["test_dumpable_off.py"],
    vm_host = ":debian12",
    data = HANDLE_DATA,
    guest_setup = handle_guest_setup("/usr/local/bin/victim-crash dumpable-off-segv || true"),
    timeout_secs = 300,
    tags = VM_TAGS,
)

# 3. deleted_exe: binary deletes itself then crashes
vm_python_test(
    name = "deleted_exe",
    srcs = ["test_deleted_exe.py"],
    vm_host = ":debian12",
    data = HANDLE_DATA,
    guest_setup = handle_guest_setup("/usr/local/bin/victim-crash self-delete-segv || true"),
    timeout_secs = 300,
    tags = VM_TAGS,
)

# 4. storage_refused: min_free_percent=100 forces storage refusal
vm_python_test(
    name = "storage_refused",
    srcs = ["test_storage_refused.py"],
    vm_host = ":debian12",
    data = [
        ":coregate_guest",
        "//crates/vmtest:victim-crash",
        "coregate-config-storage-refused.json",
    ],
    guest_setup = handle_guest_setup(
        "/usr/local/bin/victim-crash segv || true",
        config_file = "coregate-config-storage-refused.json",
    ),
    timeout_secs = 300,
    tags = VM_TAGS,
)

# 5. thread_crash: non-main thread named "crash-worker" crashes
vm_python_test(
    name = "thread_crash",
    srcs = ["test_thread_crash.py"],
    vm_host = ":debian12",
    data = HANDLE_DATA,
    guest_setup = handle_guest_setup("/usr/local/bin/victim-crash thread-segv || true"),
    timeout_secs = 300,
    tags = VM_TAGS,
)

# ---------------------------------------------------------------------------
# Scenarios — server modes (tested on Linux 6.19)
# ---------------------------------------------------------------------------

vm_python_test(
    name = "server_segv",
    srcs = ["test_server_segv.py"],
    vm_host = ":debian12_linux_6_19",
    data = HANDLE_DATA + ["coregate_assertions.py"],
    guest_setup = server_guest_setup(
        "server",
        "/usr/local/bin/victim-crash segv || true",
    ),
    timeout_secs = 300,
    tags = VM_TAGS,
)

vm_python_test(
    name = "server_legacy_segv",
    srcs = ["test_server_legacy_segv.py"],
    vm_host = ":debian12_linux_6_19",
    data = HANDLE_DATA + ["coregate_assertions.py"],
    guest_setup = server_guest_setup(
        "server-legacy",
        "/usr/local/bin/victim-crash segv || true",
    ),
    timeout_secs = 300,
    tags = VM_TAGS,
)

# ---------------------------------------------------------------------------
# Smoke test (shell)
# ---------------------------------------------------------------------------

# vm_sh_test(
#     name = "smoke_test",
#     vm_host = ":debian12",
#     srcs = ["smoke_test.sh"],
#     timeout_secs = 300,
# )
